create a split screen for the dashboard page

--- a/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
@@ -1,6 +1,39 @@
 <app-header> </app-header>
 
+<div class="container">
+    <div class="current-article">
+        <div class="centered">
+            <h1> Article 1</h1>
+            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque fugiat saepe deleniti qui aspernatur? Nam asperiores enim nisi alias numquam porro. Corporis consequuntur quidem eius fuga id esse sint odio?     </p>
+            
+        </div>
+        
+    </div>
+    
+    <div class="list-articles">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque fugiat saepe deleniti qui aspernatur? Nam asperiores enim nisi alias numquam porro. Corporis consequuntur quidem eius fuga id esse sint odio?
+    </div>
+</div>
+
+<!-- <div class="container">
+    <div class="left">
+        <div class="centered">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non assumenda voluptas ipsum minima, nisi eaque autem nobis corrupti magnam molestias? Fugiat modi cum, voluptas quidem nam est quos quisquam nesciunt!</p>
+        </div>
+    </div>
+      
+    <div class="right">
+        <div class="centered">
+            <app-blog-card></app-blog-card>
+            <app-blog-card></app-blog-card>
+            <app-blog-card></app-blog-card>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non assumenda voluptas ipsum minima, nisi eaque autem nobis corrupti magnam molestias? Fugiat modi cum, voluptas quidem nam est quos quisquam nesciunt!</p>
+        </div>
+    </div>
+</div> -->
 
 
-<a href="#" (click)="logout()">Se déconnecter</a>
+
+
+<!-- <a href="#" (click)="logout()">Se déconnecter</a> -->
 
