Add inputs to ArticleComponent & ArticleCardComponent

--- a/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
@@ -2,35 +2,16 @@
 
 <div class="container">
     <div class="current-article">
-        <div class="centered">
-            <h1> Article 1</h1>
-            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque fugiat saepe deleniti qui aspernatur? Nam asperiores enim nisi alias numquam porro. Corporis consequuntur quidem eius fuga id esse sint odio?     </p>
-            
-        </div>
-        
+        <app-article title="Article 1" author="Achraf El Khamsi" content="Lorem Ipsum"></app-article>
     </div>
     
     <div class="list-articles">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque fugiat saepe deleniti qui aspernatur? Nam asperiores enim nisi alias numquam porro. Corporis consequuntur quidem eius fuga id esse sint odio?
+        <app-article-card title="Article 1" author="Achraf El Khamsi"></app-article-card>
+        <app-article-card title="Article 2" author="Achraf El Khamsi"></app-article-card>
+        <app-article-card title="Article 3" author="Achraf El Khamsi"></app-article-card>
     </div>
 </div>
 
-<!-- <div class="container">
-    <div class="left">
-        <div class="centered">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non assumenda voluptas ipsum minima, nisi eaque autem nobis corrupti magnam molestias? Fugiat modi cum, voluptas quidem nam est quos quisquam nesciunt!</p>
-        </div>
-    </div>
-      
-    <div class="right">
-        <div class="centered">
-            <app-blog-card></app-blog-card>
-            <app-blog-card></app-blog-card>
-            <app-blog-card></app-blog-card>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non assumenda voluptas ipsum minima, nisi eaque autem nobis corrupti magnam molestias? Fugiat modi cum, voluptas quidem nam est quos quisquam nesciunt!</p>
-        </div>
-    </div>
-</div> -->
 
 
 
