--- a/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
+++ b/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
@@ -7,14 +7,14 @@
 }
 
 .current-article {
-    background: yellow;
     width: 60%;
     padding: 1em;
+    margin-top: 5%;
 }
 
 .list-articles {
-    background: red;
     width: 40%;
+    margin-top: 5%;
 }
 
 /* Split the screen in half */
