Changing margin and layout of ArticleComponent

--- a/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
+++ b/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
@@ -9,7 +9,8 @@
 .current-article {
     width: 60%;
     padding: 1em;
-    margin-top: 5%;
+    margin-top: 3%;
+    margin-left: 3%;
 }
 
 .list-articles {
