use Article service to retrieve all the articles in the database by the dashboard page

--- a/client/src/app/modules/dashboard/components/article/article.component.html
+++ b/client/src/app/modules/dashboard/components/article/article.component.html
@@ -1,6 +1,6 @@
 <div>
     <h1> {{title}}</h1>
-    <p> <span class="bold"> Author: </span>  {{author}} | <span class="bold"> Published at: </span>  {{author}} </p>
+    <p> <span class="bold"> Author: </span>  {{author}} <!--| <span class="bold"> Published at: </span>  {{author}} </p> -->
     <p> 
         {{content}}
     </p>
