--- a/client/src/app/modules/dashboard/components/article-card/article-card.component.html
+++ b/client/src/app/modules/dashboard/components/article-card/article-card.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <h1> {{title}}</h1>
         <p> <span class="bold"> Author: </span>  {{author}} </p>
-        <p> <span class="bold"> Created At: </span>  {{author}} </p>
+        <!-- <p> <span class="bold"> Created At: </span>  {{author}} </p> -->
     </div>
 </a>
 
