create empty pages for /my-articles & /create

--- a/client/src/app/modules/dashboard/components/article-card/article-card.component.scss
+++ b/client/src/app/modules/dashboard/components/article-card/article-card.component.scss
@@ -5,6 +5,10 @@
     box-shadow: 4px 3px 8px -1px rgba(84,67,67,0.75);
 }
 
+.container:hover {
+    background: rgb(212, 212, 212);
+}
+
 .bold {
     font-weight: bold;
 }
