--- a/client/src/app/modules/dashboard/components/header/header.component.html
+++ b/client/src/app/modules/dashboard/components/header/header.component.html
@@ -1,7 +1,17 @@
 <header>
     <div class="container">
-        
         <div class="logo"> HackerDiary </div>
-   
+
+        <nav>
+            <ul>
+                <li class="login-button">
+                    <a href="#" routerLink='/my-articles'>My Articles</a>
+                </li>
+                <li class="signup-button primary-color">
+                    <a href="#" routerLink='/create'>Create an Article</a>
+                </li>
+            </ul>
+        </nav>
+        
     </div>
 </header>
