--- a/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
+++ b/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
@@ -18,13 +18,21 @@
     margin-top: 5%;
 }
 
+ul {
+    cursor: pointer;
+    padding: 0;
+    list-style-type: none;
+    margin-bottom: 1em;
+}
+
+
 /* Split the screen in half */
 
   /* If you want the content centered horizontally and vertically */
-//   .centered {
-//     position: absolute;
-//     top: 50%;
-//     left: 50%;
-//     transform: translate(-50%, -50%);
-//     text-align: center;
-//   }
+  .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
