Make the logo clickable. It redirects to /dashboard

--- a/client/src/app/modules/dashboard/components/header/header.component.html
+++ b/client/src/app/modules/dashboard/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="container">
-        <div class="logo"> HackerDiary </div>
+        <a routerLink="/dashboard"> <div class="logo"> HackerDiary </div> </a>
 
         <nav>
             <ul>
