make the articles list scrollable

--- a/client/src/app/modules/dashboard/components/article/article.component.html
+++ b/client/src/app/modules/dashboard/components/article/article.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="article">
+<div *ngIf="article" class="container sticky">
     <h1> {{article.name}}</h1>
     <p> <span class="bold"> Author: </span>  {{article.name}} <!--| <span class="bold"> Published at: </span>  {{author}} </p> -->
     <p> 
