--- a/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
+++ b/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
@@ -16,6 +16,9 @@
 .list-articles {
     width: 40%;
     margin-top: 5%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 550px;
 }
 
 ul {
