--- a/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
             <app-article-card 
                 [id]="article.id" 
                 [title]="article.name" 
-                [author]="article.name"
+                [author]="article.username"
             >
             </app-article-card>
         </ul>
