--- a/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
+++ b/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
@@ -11,7 +11,8 @@
     padding: 1em;
     margin-top: 3%;
     margin-left: 3%;
-    background: yellow;
+    background: #f4edde;
+    box-shadow: 4px 3px 8px -1px rgba(84,67,67,0.75);
 }
 
 .list-articles {
