--- a/client/src/app/modules/dashboard/pages/my-articles/my-articles.component.html
+++ b/client/src/app/modules/dashboard/pages/my-articles/my-articles.component.html
@@ -1,1 +1,23 @@
-<app-header></app-header>
+<app-header> </app-header>
+
+<div class="container">
+    <div class="current-article">
+        <app-article [article]="selectedArticle"></app-article>
+    </div>
+    
+    <div class="list-articles">
+        <ul *ngFor="let article of articles" (click)="onSelect(article)">
+            <app-article-card 
+                [id]="article.id" 
+                [title]="article.name" 
+                [author]="article.username"
+            >
+            </app-article-card>
+        </ul>
+    </div>
+    
+</div>
+
+
+<!-- <a href="#" (click)="logout()">Se déconnecter</a> -->
+
