--- a/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
+++ b/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
@@ -23,6 +23,14 @@
     height: 550px;
 }
 
+.list-comments {
+    box-shadow: 4px 3px 8px -1px rgba(84,67,67,0.75);
+    background: #fffefb;
+    width: 100%;
+    line-height: 0.5em;
+    margin-bottom: 2em;
+}
+
 ul {
     cursor: pointer;
     padding: 0;
