--- a/client/src/app/modules/dashboard/components/comment/comment.component.html
+++ b/client/src/app/modules/dashboard/components/comment/comment.component.html
@@ -1,3 +1,3 @@
 <div *ngIf="comment" class="container">
-    <span class="bold"> {{comment.author}}:  </span> {{comment.content}}
+    <span class="bold"> {{comment.username}}:  </span> {{comment.comment}}
 </div>
