--- a/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
+++ b/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
@@ -11,7 +11,7 @@
     padding: 1em;
     margin-top: 3%;
     margin-left: 3%;
-    background: #f4edde;
+    background: #fffcf7;
     box-shadow: 4px 3px 8px -1px rgba(84,67,67,0.75);
 }
 
@@ -25,7 +25,7 @@
 
 .list-comments {
     box-shadow: 4px 3px 8px -1px rgba(84,67,67,0.75);
-    background: #fffefb;
+    background: #fffcf7;
     line-height: 0.5em;
 }
 
