--- a/client/src/app/modules/dashboard/components/article/article.component.scss
+++ b/client/src/app/modules/dashboard/components/article/article.component.scss
@@ -7,3 +7,16 @@
     font-size: 1.4em;
     margin: 0;
 }
+
+.article-header {
+    display: flex;
+}
+
+i {
+    margin-top: 9%;
+    margin-left: 4%;
+}
+
+i:hover {
+    cursor: pointer;
+}
