--- a/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
     </div>
     
     <div class="list-articles">
-        <ul *ngFor="let article of articles" (click)="onSelect(article)">
+        <ul *ngFor="let article of articles" (click)="onSelectFromList(article)">
             <app-article-card 
                 [id]="article.id" 
                 [title]="article.name" 
